Ported stuff from 1.19 and updated docs + some other stuff