@@ -1,12 +1,12 @@
 plugins {
-    id 'fabric-loom'
+    id 'fabric-loom' version '0.12.+'
     id 'maven-publish'
-    id 'io.github.juuxel.loom-quiltflower' version '1.6.0'
-    id 'org.quiltmc.quilt-mappings-on-loom' version '4.0.0'
+    id "io.github.juuxel.loom-quiltflower" version "1.7.+"
+    id 'org.quiltmc.quilt-mappings-on-loom' version '4.+'
 }
 
-archivesBaseName = mod_id
-version = "$mod_version+$minecraft_version"
+archivesBaseName = project.archives_base_name
+version = "$mod_version+build.$build_number-$minecraft_version"
 group = project.maven_group
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -31,7 +31,7 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings loom.layered {
         it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${project.quilt_mappings}:v2"))
-        it.parchment("org.parchmentmc.data:parchment-1.18.1:BLEEDING-20220123.104336-10@zip")
+        it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220605.112901-6@zip")
         it.officialMojangMappings {
             setNameSyntheticMembers(false)
         }
@@ -43,31 +43,11 @@ dependencies {
 }
 
 processResources {
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
     inputs.property "version", project.version
 
-    from(sourceSets.main.resources.srcDirs) {
-        include "fabric.mod.json"
+    filesMatching("fabric.mod.json") {
         expand "version": project.version
     }
-}
-
-tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
-    from sourceSets.main.allSource
-}
-jar { from "LICENSE" }
-
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
-
-jar {
-    from "LICENSE"
 }
 
 Properties properties = new Properties()
@@ -87,3 +67,54 @@ task updateTemplate(type: Copy) {
     destinationDir = rootDir
 }
 publish.dependsOn updateTemplate
+
+processResources {
+    inputs.property "version", project.version
+
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
+}
+
+java {
+    withSourcesJar()
+    withJavadocJar()
+    toolchain.languageVersion = JavaLanguageVersion.of(17)
+}
+
+tasks.withType(JavaCompile).configureEach {
+    it.options.release = 17
+    it.options.encoding = 'UTF-8'
+}
+
+compileJava {
+    options.compilerArgs += '--enable-preview'
+}
+
+jar {
+    from('LICENSE') {
+        rename {
+            "${it}_$archivesBaseName"
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        if (project.hasProperty("siphalorMavenUser")) {
+            maven {
+                name = "Siphalor"
+                url = "https://maven.siphalor.de/upload.php"
+                credentials {
+                    username = siphalorMavenUser
+                    password = siphalorMavenPassword
+                }
+            }
+        }
+    }
+}
